--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "@google/genai": "^0.15.0",
-    "three": "^0.167.0",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/drei": "^9.108.3",
-    "@react-three/xr": "^5.7.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "@google/genai": "^1.28.0",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/xr": "^6.6.27",
+    "three": "^0.181.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
